--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,30 @@
 .hidden {
   display: none;
 }
+
+body {
+  background-color: rgb(194, 169, 197);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  background-color: white;
+  text-align: center;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+h2 {
+  background-color: white;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+form {
+  background-color: white;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
